# onchain_graphics

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package.json
src/og_backend/: Cargo.toml  og_backend.did
src/og_backend/src/: auth.rs  frontend_api.rs  lib.rs  registry.rs
src/og_frontend/: index.html  package.json  vite.config.js
src/og_frontend/src/: App.vue  apiAgent.js  main.js
src/og_frontend/src/components/: HamburgerMenu.vue  Header.vue
src/og_frontend/src/router/: index.js
src/og_frontend/src/store/: workStore.js
src/og_frontend/src/views/: About.vue  Collection.vue  Contact.vue  Graphic.vue  Home.vue  Roadmap.vue  Work.vue
src/test_asset_canister/: index.html  package.json  tsconfig.json
src/test_asset_canister/public/: og_metadata.json
src/test_asset_canister/src/: App.vue  main.js
