[package]
name = "og_backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.13"
hex = "0.4.3"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
time = { version = "0.3.40", features = ["formatting", "macros"] }
